Ajustes de sources e correções de deploy

--- a/projects/aboutme.html
+++ b/projects/aboutme.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/table.css">
     <link rel="stylesheet" href="./css/tags.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
             <div class="container h-100 d-flex align-items-end hero-text">
                 <div class="row w-100 align-items-start">
                     <div class="col-md-4 col-lg-3 d-flex flex-column justify-content-start">
-                        <img src="/assets/lucasAraujo-foto.jpg" alt="Minha foto" class="foto-hero">
+                        <img src="./assets/lucasAraujo-foto.jpg" alt="Minha foto" class="foto-hero">
                     </div>
 
                     <div class="col-md-8 col-lg-9 d-flex flex-column text-start">
