--- a/projects/gamesHub.html
+++ b/projects/gamesHub.html
@@ -30,7 +30,7 @@
   <main class="project-page">
       <section class="container-xxl">
           <div class="row g-0">
-              <img src="/assets/gamesHub/gamesHub-heroImage.jpg" alt="Games Hub Hero Image" class="col-12 img-fluid">
+              <img src="../assets/gamesHub/gamesHub-heroImage.jpg" alt="Games Hub Hero Image" class="col-12 img-fluid">
           </div>
       </section>
     
