--- a/projects/einsteroids.html
+++ b/projects/einsteroids.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/colors.css">
-    <link rel="stylesheet" href="/css/typography.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/cards.css">
-    <link rel="stylesheet" href="/css/carousel.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/table.css">
-    <link rel="stylesheet" href="/css/tags.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/colors.css">
+    <link rel="stylesheet" href="../css/typography.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/cards.css">
+    <link rel="stylesheet" href="../css/carousel.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/table.css">
+    <link rel="stylesheet" href="../css/tags.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
     <main class="project-page">
         <section class="container-xxl">
             <div class="row g-0">
-                <img src="/assets/einsteroids/Einsteroid_Logo.png" alt="Einsteroid Logo" class="col-12 img-fluid">
+                <img src="../assets/einsteroids/Einsteroid_Logo.png" alt="Einsteroid Logo" class="col-12 img-fluid">
             </div>
         </section>
 
@@ -67,13 +67,13 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/assets/einsteroids/Print-1.png" class="d-block w-100" alt="...">
+                        <img src="../assets/einsteroids/Print-1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/einsteroids/Print-2.png" class="d-block w-100" alt="...">
+                        <img src="../assets/einsteroids/Print-2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/einsteroids/Print-3.png" class="d-block w-100" alt="...">
+                        <img src="../assets/einsteroids/Print-3.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
 
@@ -90,7 +90,7 @@
             <p class="mb-5">Einsteroid is an arcade game in which you must help Einstein, the astronaut, to survive in space for as long as possible. You'll need to use your gravitational skills to dodge all the meteors, satellites and all the flying saucers that come in your way while floating in space. Test your reflexes with simple controls: change gravity with only one button!  How long can you survive?!</p>
 
             <div class="row g-0 mb-5">
-                <img src="/assets/einsteroids/Einsteroid_Cover.gif" alt="Einsteroid Gameplay" class="col-12 img-fluid">
+                <img src="../assets/einsteroids/Einsteroid_Cover.gif" alt="Einsteroid Gameplay" class="col-12 img-fluid">
             </div>
 
             <hr class="my-5 border-secondary">
@@ -106,6 +106,6 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
