--- a/projects/dodging-for-treasure.html
+++ b/projects/dodging-for-treasure.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfólio de Lucas Araujo, Designer de Produto com foco em UI/UX.">
-    <title>Lucas Araujo | Designer de Produto</title>
+    <meta name="description" content="Hi! I am Lucas Araujo, a Designer proudly graduated in PUC-Rio and borned in Rio de Janeiro. I am a Product Designer who is very passionate about Visual Design and user interface! Here are the highlighted projects of my entire carreer. I hope you like it! ">
+    <title>Lucas Araujo | Portfolio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
