--- a/projects/about-me.html
+++ b/projects/about-me.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="./css/tags.css">
     <link rel="stylesheet" href="./css/styles.css">
 
+            <link rel="icon" type="image/png" href="../assets/favicon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Geist:wght@100..900&display=swap" rel="stylesheet">
