Fix: ajustando caminhos das imagens nos componentes

--- a/projects/cuca-catch.html
+++ b/projects/cuca-catch.html
@@ -31,7 +31,7 @@
     <main class="project-page">
         <section class="container-xxl">
             <div class="row g-0">
-                <img src="../assets/cuca-catch/Cover.png" alt="Cuca Catch Cover" class="col-12 img-fluid">
+                <img src="assets//cuca-catch/Cover.png" alt="Cuca Catch Cover" class="col-12 img-fluid">
             </div>
         </section>
 
@@ -74,7 +74,7 @@
             <h3 class="mb-3">Controls</h3>
             <div class="row align-items-center mb-5">
                 <div class="col-12 col-md-4 mb-3 mb-md-0">
-                    <img src="../assets/cuca-catch/Controls.png" alt="Cuca Catch Controls" class="img-fluid">
+                    <img src="assets//cuca-catch/Controls.png" alt="Cuca Catch Controls" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-8">
                     <p>Your character moves using your iPhone camera. Pointing your MOUTH sideways moves you to the RIGHT or LEFT. Moving your EYEBROW vertically moves you UP or DOWN.</p>
@@ -83,7 +83,7 @@
 
             <h3 class="mb-3">Difficulties</h3>
             <div class="mb-4">
-                <img src="../assets/cuca-catch/Difficulties.png" alt="Difficulties mode" class="img-fluid w-100">       
+                <img src="assets//cuca-catch/Difficulties.png" alt="Difficulties mode" class="img-fluid w-100">       
             </div>
             <p class="mb-5">In the hard mode, you play against three enemies at the same time, which turns CUCA CATCH into a very fast and exciting game!</p>
 
