--- a/projects/dodging-for-treasure.html
+++ b/projects/dodging-for-treasure.html
@@ -31,7 +31,7 @@
     <main class="project-page">
         <section class="container-xxl">
             <div class="row g-0">
-                <img src="../assets/dodging-for-treasure/Printscreen_InGame.png" alt="Dodging for Treasures Cover" class="col-12 img-fluid">
+                <img src="assets//dodging-for-treasure/Printscreen_InGame.png" alt="Dodging for Treasures Cover" class="col-12 img-fluid">
             </div>
         </section>
 
@@ -61,10 +61,10 @@
 
             <div class="row g-0 my-4 gap-2 gap-md-0">
                 <div class="col-12 col-md-6">
-                    <img src="../assets/dodging-for-treasure/Printscreen_InGame.png" alt="In-game screenshot" class="img-fluid">
+                    <img src="assets//dodging-for-treasure/Printscreen_InGame.png" alt="In-game screenshot" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="../assets/dodging-for-treasure/Buffs_Explained_v4.png" alt="Buffs explanation" class="img-fluid">
+                    <img src="assets//dodging-for-treasure/Buffs_Explained_v4.png" alt="Buffs explanation" class="img-fluid">
                 </div>
             </div>
 
