--- a/projects/games-hub.html
+++ b/projects/games-hub.html
@@ -30,7 +30,7 @@
   <main class="project-page">
       <section class="container-xxl">
           <div class="row g-0">
-              <img src="../assets/games-hub/gamesHub-heroImage.jpg" alt="Games Hub Hero Image" class="col-12 img-fluid">
+              <img src="assets//games-hub/gamesHub-heroImage.jpg" alt="Games Hub Hero Image" class="col-12 img-fluid">
           </div>
       </section>
     
@@ -72,7 +72,7 @@
       <p>I spent my time huddled with the PO and PM, breaking down the <strong>B2B2C architecture</strong>. We weren't just designing for a user; we were designing a value chain for partners and customers alike. It was about making sure the "Gaming Universe" felt like a unified home, not just a folder of random apps.</p>
 
       <div class="row g-0 my-5">
-        <img src="../assets/games-hub/business-logic-diagram.png" alt="Strategic diagram mapping a B2B2C gaming ecosystem, illustrating the complex orchestration between the white-label infrastructure, content providers, and cross-platform user segments (PC, Console, and Mobile)." class="col-12 col-sm-12 col-lg-12 my-3">
+        <img src="assets//games-hub/business-logic-diagram.png" alt="Strategic diagram mapping a B2B2C gaming ecosystem, illustrating the complex orchestration between the white-label infrastructure, content providers, and cross-platform user segments (PC, Console, and Mobile)." class="col-12 col-sm-12 col-lg-12 my-3">
       </div>
 
       ---
@@ -84,7 +84,7 @@
       <p>Technically, I had to keep things lean. I used a color-coding system to help users navigate the different platforms instantly: <strong>Yellow for Mobile, Green for Console, and Red for PC</strong>. Since the product was <strong>white-label</strong>, I kept the branding generic enough to be flexible but polished enough to look like a premium, "plug-and-play" solution.</p>
 
       <div class="row g-0 my-5">
-        <img src="../assets/games-hub/visual-identity.png" alt="Visual identity system for Games Hub, showcasing a color-coded information architecture (Yellow for Mobile, Green for Console, Red for PC) designed for high scannability and white-label flexibility." class="col-12 col-sm-12 col-lg-12 my-3">
+        <img src="assets//games-hub/visual-identity.png" alt="Visual identity system for Games Hub, showcasing a color-coded information architecture (Yellow for Mobile, Green for Console, Red for PC) designed for high scannability and white-label flexibility." class="col-12 col-sm-12 col-lg-12 my-3">
       </div>
 
       ---
@@ -103,10 +103,10 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../assets/games-hub/version-history-1.png" class="d-block w-100" alt="...">
+                <img src="assets//games-hub/version-history-1.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="../assets/games-hub/version-history-2.png" class="d-block w-100" alt="...">
+                <img src="assets//games-hub/version-history-2.png" class="d-block w-100" alt="...">
             </div>
         </div>
 
