--- a/projects/riccch-ladies.html
+++ b/projects/riccch-ladies.html
@@ -29,7 +29,7 @@
 
   <main class="project-page">
     <section id="riccchladies" class="container-fluid px-4 px-md-5">
-      <img src="../assets/riccch-ladies/AsRicccas_1_Grande.png" style="max-height: 500px; object-fit: cover;" alt="Cover" class="col-12 col-sm-12 col-lg-12">    
+      <img src="assets//riccch-ladies/AsRicccas_1_Grande.png" style="max-height: 500px; object-fit: cover;" alt="Cover" class="col-12 col-sm-12 col-lg-12">    
       </iframe>
 
         <h1>Riccch Ladies</h1>
@@ -57,18 +57,18 @@
         <p>A design print project based on three fictional characters: Cassandra, Cecilia and Conceição, all named with the letter c. Many studies about print techniques were made, besides some applications that consider three different collor palletes, enhancing the triad of the “Ricccas”.</p>
 
         <div class="row g-0 my-5">
-          <img src="../assets/riccch-ladies/AsRicccas_0.png" style="width: 100%; object-fit: cover;" alt="Calendar design choices explanation" class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="assets//riccch-ladies/AsRicccas_0.png" style="width: 100%; object-fit: cover;" alt="Calendar design choices explanation" class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <h3>Cecilia - The youngest rich persona</h3>
         <div class="row g-0 my-5">
-          <img src="../assets/riccch-ladies/Cecilia_Refs.png" alt="Cecilia Concept" class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="assets//riccch-ladies/Cecilia_Refs.png" alt="Cecilia Concept" class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <p>Cecília was conceive to be a young-adult woman full of attitude and with a edgy refined fashion style made of many contrasts. Thus, I utilized celebrities like Katy Perry, Natalia Kills and Andrey Hepburn as fashion references. All clothes were designed strictely in black-and-white to highligh the opositions in the prints made to the character.</p>
 
         <div class="row g-0 my-5">
-          <img src="../assets/riccch-ladies/Moodboard_Cecilia.jpg" alt="Cecilia Moodboard" class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="assets//riccch-ladies/Moodboard_Cecilia.jpg" alt="Cecilia Moodboard" class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <div id="carouselCecilia" class="carousel slide carousel-wrapper" data-bs-ride="carousel">
@@ -86,31 +86,31 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/riccch-ladies/Estampa_Cecilia_1.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Estampa_Cecilia_1.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cecilia_Sims_1.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cecilia_Sims_1.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cecilia_Sims_2.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cecilia_Sims_2.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Estampa_Cecilia_2.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Estampa_Cecilia_2.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cecilia_Sims_3.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cecilia_Sims_3.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cecilia_Sims_4.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cecilia_Sims_4.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Estampa_Cecilia_3.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Estampa_Cecilia_3.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cecilia_Sims_5.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cecilia_Sims_5.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cecilia_Sims_6.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cecilia_Sims_6.png" class="d-block w-100" alt="Book Pages">
             </div>
           </div>
 
@@ -128,13 +128,13 @@
       <h3>Cassandra - The second rich persona</h3>
 
       <div class="row g-0 my-5">
-          <img src="../assets/riccch-ladies/Cassandra_Refs.png" alt="Cassandra Concept" class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="assets//riccch-ladies/Cassandra_Refs.png" alt="Cassandra Concept" class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <p>Cassandra was conceive to be a rich old lady that loves the color pink and floral patterns. Thus, I utilized a character with the same name, Cassandra, from the brazilian TV series "Sai de Baixo" as the main fashion reference to design the floral print.</p>
 
         <div class="row g-0 my-5">
-          <img src="../assets/riccch-ladies/Moodboard_Cassandra.jpg" alt="Cassandra Moodboard" class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="assets//riccch-ladies/Moodboard_Cassandra.jpg" alt="Cassandra Moodboard" class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <div id="carouselCassandra" class="carousel slide carousel-wrapper" data-bs-ride="carousel">
@@ -152,31 +152,31 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/riccch-ladies/Estampa_Cassandra_1.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Estampa_Cassandra_1.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cassandra_Sims_1.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cassandra_Sims_1.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cassandra_Sims_2.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cassandra_Sims_2.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Estampa_Cassandra_2.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Estampa_Cassandra_2.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cassandra_Sims_3.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cassandra_Sims_3.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cassandra_Sims_4.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cassandra_Sims_4.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Estampa_Cassandra_3.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Estampa_Cassandra_3.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cassandra_Sims_5.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cassandra_Sims_5.png" class="d-block w-100" alt="Book Pages">
             </div>
             <div class="carousel-item">
-              <img src="../assets/riccch-ladies/Cassandra_Sims_6.png" class="d-block w-100" alt="Book Pages">
+              <img src="assets//riccch-ladies/Cassandra_Sims_6.png" class="d-block w-100" alt="Book Pages">
             </div>
           </div>
 
@@ -194,13 +194,13 @@
         <h3>Conceição - The oldest rich persona</h3>
 
         <div class="row g-0 my-5">
-            <img src="../assets/riccch-ladies/Conceicao_Refs.png" alt="Conceicao Concept" class="col-12 col-sm-12 col-lg-12 my-3">
+            <img src="assets//riccch-ladies/Conceicao_Refs.png" alt="Conceicao Concept" class="col-12 col-sm-12 col-lg-12 my-3">
           </div>
 
           <p>Cassandra was conceive to be a rich old lady that loves the color pink and floral patterns. Thus, I utilized a character with the same name, Cassandra, from the brazilian TV series "Sai de Baixo" as the main fashion reference to design the floral print.</p>
 
           <div class="row g-0 my-5">
-            <img src="../assets/riccch-ladies/Moodboard_Conceicao.jpg" alt="Conceicao Moodboard" class="col-12 col-sm-12 col-lg-12 my-3">
+            <img src="assets//riccch-ladies/Moodboard_Conceicao.jpg" alt="Conceicao Moodboard" class="col-12 col-sm-12 col-lg-12 my-3">
           </div>
 
           <div id="carouselConceicao" class="carousel slide carousel-wrapper" data-bs-ride="carousel">
@@ -218,31 +218,31 @@
 
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/riccch-ladies/Estampa_Conceicao_1.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Estampa_Conceicao_1.png" class="d-block w-100" alt="Book Pages">
               </div>
               <div class="carousel-item">
-                <img src="../assets/riccch-ladies/Conceicao_Sims_1.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Conceicao_Sims_1.png" class="d-block w-100" alt="Book Pages">
               </div>
               <div class="carousel-item">
-                <img src="../assets/riccch-ladies/Conceicao_Sims_2.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Conceicao_Sims_2.png" class="d-block w-100" alt="Book Pages">
               </div>
               <div class="carousel-item">
-                <img src="../assets/riccch-ladies/Estampa_Conceicao_2.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Estampa_Conceicao_2.png" class="d-block w-100" alt="Book Pages">
               </div>
               <div class="carousel-item">
-                <img src="../assets/riccch-ladies/Conceicao_Sims_3.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Conceicao_Sims_3.png" class="d-block w-100" alt="Book Pages">
               </div>
               <div class="carousel-item">
-                <img src="../assets/riccch-ladies/Conceicao_Sims_4.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Conceicao_Sims_4.png" class="d-block w-100" alt="Book Pages">
               </div>
               <div class="carousel-item">
-                <img src="../assets/riccch-ladies/Estampa_Conceicao_3.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Estampa_Conceicao_3.png" class="d-block w-100" alt="Book Pages">
               </div>
               <div class="carousel-item">
-                <img src="../assets/riccch-ladies/Conceicao_Sims_5.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Conceicao_Sims_5.png" class="d-block w-100" alt="Book Pages">
               </div>
               <div class="carousel-item">
-                <img src="../assets/riccch-ladies/Conceicao_Sims_6.png" class="d-block w-100" alt="Book Pages">
+                <img src="assets//riccch-ladies/Conceicao_Sims_6.png" class="d-block w-100" alt="Book Pages">
               </div>
             </div>
 
