--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="./css/tags.css">
         <link rel="stylesheet" href="./css/styles.css">
 
-        <link rel="icon" type="image/png" href="../assets/favicon.png">
+        <link rel="icon" type="image/png" href="assets//favicon.png">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
