--- a/projects/about-me.html
+++ b/projects/about-me.html
@@ -9,17 +9,17 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/colors.css">
-    <link rel="stylesheet" href="./css/typography.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/cards.css">
-    <link rel="stylesheet" href="./css/carousel.css">
-    <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/table.css">
-    <link rel="stylesheet" href="./css/tags.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
-            <link rel="icon" type="image/png" href="../assets/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,13 +33,13 @@
     <main class="project-page">
         <section class="hero-section position-relative">
             <div class="hero-strip">
-              <img src="./assets/lucasAraujo-graphism-hero3.png" alt="Hero Banner" class="hero-img">
+              <img src="/assets/lucasAraujo-graphism-hero3.png" alt="Hero Banner" class="hero-img">
             </div>
 
             <div class="container h-100 d-flex align-items-end hero-text">
                 <div class="row w-100 align-items-start">
                     <div class="col-md-4 col-lg-3 d-flex flex-column justify-content-start">
-                        <img src="./assets/lucasAraujo-foto.jpg" alt="Minha foto" class="foto-hero">
+                        <img src="/assets/lucasAraujo-foto.jpg" alt="Minha foto" class="foto-hero">
                     </div>
 
                     <div class="col-md-8 col-lg-9 d-flex flex-column text-start">
@@ -368,7 +368,7 @@
 
 
 <!---------------- Bootstrap JS ---------------->
-<script src="../js/script.js"></script>
+<script src="/js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
